{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 11,
  "lineage": "834cbff8-6355-81f3-bf4d-ece3809c7f21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "calcify_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:511092105813:instance/i-07f6b6633581c49b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f6b6633581c49b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "calcify-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0efbfa21de3d86935"
              }
            ],
            "primary_network_interface_id": "eni-0efbfa21de3d86935",
            "private_dns": "ip-10-0-1-248.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.248",
            "public_ip": "65.0.86.51",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b40b2463455dbb1d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02545ec102a660f24",
            "tags": {
              "Name": "calcify-server"
            },
            "tags_all": {
              "Name": "calcify-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01daa160776ea1dda"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511092105813",
            "id": "i-07f6b6633581c49b4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.calcify_key",
            "aws_security_group.calcify_sg",
            "aws_subnet.calcify_subnet",
            "aws_vpc.calcify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "calcify_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511092105813:internet-gateway/igw-03de090f5e321618b",
            "id": "igw-03de090f5e321618b",
            "owner_id": "511092105813",
            "region": "ap-south-1",
            "tags": {
              "Name": "calcify-igw"
            },
            "tags_all": {
              "Name": "calcify-igw"
            },
            "vpc_id": "vpc-0284c16045275ae82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.calcify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "calcify_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511092105813:route-table/rtb-0112e67e875f2def7",
            "id": "rtb-0112e67e875f2def7",
            "owner_id": "511092105813",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03de090f5e321618b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0284c16045275ae82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511092105813",
            "id": "rtb-0112e67e875f2def7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.calcify_igw",
            "aws_vpc.calcify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "calcify_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074b83a0683f23abe",
            "region": "ap-south-1",
            "route_table_id": "rtb-0112e67e875f2def7",
            "subnet_id": "subnet-02545ec102a660f24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511092105813",
            "id": "rtbassoc-074b83a0683f23abe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.calcify_igw",
            "aws_route_table.calcify_rt",
            "aws_subnet.calcify_subnet",
            "aws_vpc.calcify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "calcify_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511092105813:security-group/sg-01daa160776ea1dda",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01daa160776ea1dda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "calcify-sg",
            "name_prefix": "",
            "owner_id": "511092105813",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0284c16045275ae82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511092105813",
            "id": "sg-01daa160776ea1dda",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.calcify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "calcify_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511092105813:subnet/subnet-02545ec102a660f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02545ec102a660f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511092105813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "calcify-subnet"
            },
            "tags_all": {
              "Name": "calcify-subnet"
            },
            "vpc_id": "vpc-0284c16045275ae82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511092105813",
            "id": "subnet-02545ec102a660f24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.calcify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "calcify_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:511092105813:vpc/vpc-0284c16045275ae82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8d8d6e80c88d921",
            "default_route_table_id": "rtb-0606e388eaae306b4",
            "default_security_group_id": "sg-0d84aca25c6dc120a",
            "dhcp_options_id": "dopt-08290cb1c70ffe034",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0284c16045275ae82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0606e388eaae306b4",
            "owner_id": "511092105813",
            "region": "ap-south-1",
            "tags": {
              "Name": "calcify-vpc"
            },
            "tags_all": {
              "Name": "calcify-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511092105813",
            "id": "vpc-0284c16045275ae82",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}